force-app/main/default/objects/Produto_da_demonstracao__c/Produto_da_demonstracao__c.object-meta.xml
<CustomObject>
    <label>Ativo do comodato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ativos do comodato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>