force-app/main/default/objects/Produto_da_demonstracao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Produtos_da_demonstracao</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>