force-app/main/default/objects/Produto_da_demonstracao__c/fields/Codigo_fabricante__c.field-meta.xml
<CustomField>
    <fullName>Codigo_fabricante__c</fullName>
    <formula>Ativo__r.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código fabricante</label>
    <type>Text</type>
</CustomField>