force-app/main/default/objects/Produto_da_demonstracao__c/fields/Data_de_termino_da_demo__c.field-meta.xml
<CustomField>
    <fullName>Data_de_termino_da_demo__c</fullName>
    <formula>Demonstracao__r.Data_de_termino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de término da demo</label>
    <type>Date</type>
</CustomField>