force-app/main/default/objects/Produto_da_demonstracao__c/fields/Demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Demonstracao__c</fullName>
    <label>Comodato</label>
    <referenceTo>Demonstracao__c</referenceTo>
    <relationshipName>Produtos_da_demonstracao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>