force-app/main/default/objects/Produto_da_demonstracao__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <formula>TEXT(Ativo__r.Product2.Family)</formula>
    <label>Família</label>
    <type>Text</type>
</CustomField>