force-app/main/default/objects/Produto_da_demonstracao__c/fields/Item_pai__c.field-meta.xml
<CustomField>
    <fullName>Item_pai__c</fullName>
    <label>Item pai</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>