force-app/main/default/objects/Produto_da_demonstracao__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <formula>TEXT(Ativo__r.Product2.Linha__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linha</label>
    <type>Text</type>
</CustomField>