force-app/main/default/objects/Produto_da_demonstracao__c/fields/Modelo_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Ativo__c</fullName>
    <formula>Ativo__r.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo do Ativo</label>
    <type>Text</type>
</CustomField>