force-app/main/default/objects/Produto_da_demonstracao__c/fields/Status_da_demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Status_da_demonstracao__c</fullName>
    <label>*Status da demonstração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>